@@ -1,3 +1,8 @@
+2014-06-07 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m (queryIdentify)
+	Support also GROUP BY in options in queryIdentify.
+
 2014-06-06 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
